--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,12 @@
 @import "tailwindcss";
 @plugin "daisyui"{
-    theme:all;
+    themes:all;
+}
+
+/* Adding  cursor pointer to buttons by default */
+@layer base {
+  button:not(:disabled),
+  [role="button"]:not(:disabled) {
+    cursor: pointer;
+  }
 }
